--- a/.github/workflows/stars.yml
+++ b/.github/workflows/stars.yml
@@ -14,6 +14,7 @@ jobs:
           userId: 2554884
           year: 2022
           sessionCookie: ${{ secrets.AOC_SESSION }}
+          headerPrefix: #
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Update README stars
