feat: run every 4 hours

--- a/.github/workflows/stars.yml
+++ b/.github/workflows/stars.yml
@@ -1,7 +1,7 @@
 name: Update README ⭐
 on:
   schedule:
-    - cron: "34 * * * *"  # Every 4 hours
+    - cron: "0 */4 * * *"  # Every 4 hours
   workflow_dispatch:
 
 jobs:
