--- a/.github/workflows/stars.yml
+++ b/.github/workflows/stars.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: k2bd/advent-readme-stars@v1
+      - name: advent-readme-stars
+        uses: k2bd/advent-readme-stars@v1.0.3
         with:
           userId: 2554884
           year: 2022
